# rust-ecommerce

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  findings.md  progress.md  task_plan.md
backend/: Cargo.toml
backend/src/: error.rs  main.rs  rate_limit.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/db/: cart_repo.rs  mod.rs  order_repo.rs  product_repo.rs  user_repo.rs
backend/src/routes/: auth.rs  cart.rs  mod.rs  orders.rs  products.rs
docs/: requirements.md
frontend/: Cargo.toml  Trunk.toml  index.html  styles.css
frontend/src/: lib.rs  routes.rs
frontend/src/api/: client.rs  mod.rs
frontend/src/components/: footer.rs  header.rs  loading.rs  mod.rs  product_card.rs
frontend/src/pages/: cart.rs  home.rs  login.rs  mod.rs  not_found.rs  order_detail.rs  order_list.rs  product_detail.rs  product_list.rs  register.rs
frontend/src/state/: auth.rs  cart.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/api/: error.rs  mod.rs  requests.rs  responses.rs
shared/src/models/: cart.rs  mod.rs  order.rs  product.rs  user.rs
