[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Yew framework
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Browser APIs
gloo = "0.11"
gloo-net = "0.5"
gloo-storage = "0.3"
gloo-timers = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Shared types
shared = { path = "../shared" }

# Utils
web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlInputElement"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
