[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Utils
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
